06-clusterIP.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      podLabel: holaClusterIp
  template:
    metadata:
      labels:
        podLabel: holaClusterIp
    spec:
      containers:
      - name: hello-container
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    podLabel: holaClusterIp
